# CMake-VisualStudio-Example

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cxx
math/: CMakeLists.txt  MathExports.h
math/advanced/: AdvancedFunctions.cxx  AdvancedFunctions.h
math/simple/: SimpleFunctions.cxx  SimpleFunctions.h
